--- a/teamrosters.html
+++ b/teamrosters.html
@@ -103,14 +103,14 @@
         </div>
         <h2 style="color:white"><b><i>Neutrino Members</b></i></h2>
         <h3 style="color:white"><a href="https://prospect.yale.edu/" style="color:white"><u>PROSPECT</u></a></h3>
-        <p class="round1" style="margin-left:20px;color:white"><font size="5">PROSPECT is a reactor neutrino experiment searching for the oscillation 
+        <p class="round1" style="margin-left:20px;color:white"><font size="2">PROSPECT is a reactor neutrino experiment searching for the oscillation 
             signature of sterile neutrinos and testing our understanding of the emission of antineutrinos from the fission products in 
             a nuclear reactor. The measurements of PROSPECT will test our understanding of the Standard Model of Particle Physics, 
             deepen our understanding of nuclear processes in a reactor, and help develop technology for the remote monitoring of nuclear 
             reactors for safeguard and non-proliferation."</font></p>
          <hr>
          <h3><a href="http://novaexperiment.fnal.gov/" style="color:white"><u>NOvA</u></a></h3>
-         <p class="round1" style="color:white"><font size=""The NOvA (NuMI Off-axis ν<sub>e</sub> Appearance) experiment is shedding light on 
+         <p class="round1" style="color:white">"The NOvA (NuMI Off-axis ν<sub>e</sub> Appearance) experiment is shedding light on 
              nature’s most elusive particles: neutrinos. Since the late 1990s, physicists have known that neutrinos exhibit a quantum 
              mechanical behavior called oscillations. But this behavior is not predicted by the Standard Model of particle physics. 
              NOvA is working to better understand these strange particles through precision measurements of their oscillation properties."</p>
