--- a/teamrosters.html
+++ b/teamrosters.html
@@ -110,65 +110,64 @@
             reactors for safeguard and non-proliferation."</font></p>
          <hr>
          <h3><a href="http://novaexperiment.fnal.gov/" style="color:white"><u>NOvA</u></a></h3>
-         <p class="round1" style="color:white">"The NOvA (NuMI Off-axis ν<sub>e</sub> Appearance) experiment is shedding light on 
+         <p class="round1" style="margin-left:20px;color:white"><font size="3">"The NOvA (NuMI Off-axis ν<sub>e</sub> Appearance) experiment is shedding light on 
              nature’s most elusive particles: neutrinos. Since the late 1990s, physicists have known that neutrinos exhibit a quantum 
              mechanical behavior called oscillations. But this behavior is not predicted by the Standard Model of particle physics. 
-             NOvA is working to better understand these strange particles through precision measurements of their oscillation properties."</p>
+             NOvA is working to better understand these strange particles through precision measurements of their oscillation properties."</font></p>
         <hr>
         <h3><a href="http://microboone.fnal.gov/" style="color:white"><u>MicroBooNE</u></a></h3>
-        <p class="round1" style="margin-left:20px;color:white">"MicroBooNE is a large 170-ton liquid-argon time projection chamber (LArTPC) neutrino experiment located
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"MicroBooNE is a large 170-ton liquid-argon time projection chamber (LArTPC) neutrino experiment located
             at FermiLab.will investigate the low energy excess events observed by the MiniBooNE experiment, measure a suite of low energy neutrino cross sections, and 
-            investigate astro-particle physics."</p>
+            investigate astro-particle physics."</font></p>
         <hr>   
         <h3><a href="https://sites.duke.edu/coherent/" style="color:white"><u>COHERENT</u></a></h3>
-        <p class="round1" style="margin-left:20px;color:white">"CEvNS (pronounced "sevens"; Coherent Elastic Neutrino-Nucleus Scattering) 
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"CEvNS (pronounced "sevens"; Coherent Elastic Neutrino-Nucleus Scattering) 
             is the process of a neutrino scattering off of a nucleus in both an elastic and coherent way; it is a process that is 
             well understood within the Standard Model of particle physics. Since CEvNS is a Standard Model prediction, like the Higgs, 
             it should in fact exist and it should be tested for. The main aim of the COHERENT collaboration is to make a first direct 
-            measurement of CEvNS."</p>
+            measurement of CEvNS."</font></p>
         <hr>
         <h3><a href="http://juno.ihep.cas.cn/" style="color:white"><u>JUNO</u></a></h3>
-        <p class="round1" style="margin-left:20px;color:white">"The Jiangmen Underground Neutrino Observatory (JUNO) is a multipurpose
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"The Jiangmen Underground Neutrino Observatory (JUNO) is a multipurpose
             neutrino experiment designed to determine neutrino mass hierarchy and precisely measure oscillation parameters by detecting 
             reactor neutrinos from the Yangjiang and Taishan Nuclear Power Plants, observe supernova neutrinos, study the atmospheric 
             solar neutrinos and geo-neutrinos, and perform exotic searches, with a 20-thousand-ton liquid scintillator detector of 
-            unprecedented energy resolution at 700-meter deep underground."</p>
+            unprecedented energy resolution at 700-meter deep underground."</font></p>
         <hr>
         <h3><a href="http://www.dunescience.org/" style="color:white"><u>DUNE</u></a></h3>
-        <p class="round1" style="margin-left:20px;color:white">"The Deep Underground Neutrino Experiment (DUNE) is a leading-edge, 
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"The Deep Underground Neutrino Experiment (DUNE) is a leading-edge, 
             international experiment for neutrino science and proton decay studies. Discoveries over the past half-century have put
             neutrinos, the most abundant matter particles in the universe, in the spotlight for further research into several fundamental
-            questions about the nature of matter and the evolution of the universe — questions that DUNE will seek to answer."</p>
+            questions about the nature of matter and the evolution of the universe — questions that DUNE will seek to answer."</font></p>
         <hr>
         <h3><a href="https://www-numi.fnal.gov/" style="color:white"><u>MINOS</u></a></h3>
-        <p class="round1" style="margin-left:20px;color:white">"The MINOS Experiment is a long-baseline neutrino experiment designed to 
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"The MINOS Experiment is a long-baseline neutrino experiment designed to 
             observe the phenomena of neutrino oscillations, an effect which is related to neutrino mass. MINOS uses two detectors, one 
             located at Fermilab, at the source of the neutrinos, and the other located 450 miles away, in northern Minnesota, at the 
-            Soudan Underground Mine State Park."</p>
+            Soudan Underground Mine State Park."</font></p>
         <hr>
         <h3><a href="https://www-boone.fnal.gov/" style="color:white"><u>MiniBooNE</u></a></h3>
-        <p class="round1" style="margin-left:20px;color:white">"Housed at FermiLab, MiniBooNE is an experiment designed to test for 
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"Housed at FermiLab, MiniBooNE is an experiment designed to test for 
            neutrino mass by searching for neutrino oscillations. Knowledge of the neutrino mass may lead to physics beyond the 
-           Standard Model. Masses in the accessible range of MiniBooNE will expand our understanding of how the universe has evolved."</p>
+           Standard Model. Masses in the accessible range of MiniBooNE will expand our understanding of how the universe has evolved."</font></p>
         <hr>
         <h3><a href="http://icarustrip.fnal.gov/about-icarus/" style="color:white"><u>ICARUS</u></a></h3>
-        <p class="round1" style="margin-left:20px;color:white">"The ICARUS experiment studied neutrinos by pioneering the use of a new technology for 
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"The ICARUS experiment studied neutrinos by pioneering the use of a new technology for 
                spotting neutrinos using liquid argon. When neutrinos collide with argon atoms they create charged particles that can be tracked, and 
                the detector produces beautiful 3-D images of those particles so scientists can study them. Now at Fermilab, the ICARUS detector will 
                search for a long-theorized but never-detected type of neutrino. Scientists have observed three types of neutrino – the muon, electron and tau neutrinos – and have 
                also observed those neutrinos changing between types. Previous experiments have hinted that these three types might also be changing
                into a fourth type, one we have not been able to detect. The ICARUS detector will use Fermilab’s neutrino beam to specifically seek 
-               evidence of this fourth type of neutrino."</p>
+               evidence of this fourth type of neutrino."</font></p>
         <hr>
         <h3><a href="http://t2k-experiment.org/" style="color:white"><u>T2K</u></a></h3>
-        <p class="round1" style="margin-left:20px;color:white">"T2K (Tokai to Kamioka) is a long-baseline neutrino experiment in Japan, and is
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"T2K (Tokai to Kamioka) is a long-baseline neutrino experiment in Japan, and is
             studying neutrino oscillations. Neutrinos are elementary particles which come in three “flavours”: electron, muon, and tau. T2K 
             has made a search for oscillations from muon neutrinos to electron neutrinos; these oscillations had never been observed by any 
             previous experiment. T2K is also making measurements of oscillations from muon neutrinos to tau neutrinos; tt will make the most 
             accurate measurements to date of the probability of these oscillations and of the difference between the masses of two of the 
-            neutrinos."</p>
+            neutrinos."</font></p>
         <hr><br>         
-          
              
         <h2 style="color:white;text-align:left;margin-left:5px"><b><i>Astroparticle Members</b></i></h2>
         <h3 style="margin-left:5px;color:white"><a href="https://www.katrin.kit.edu/" style="color:white"><u>KATRIN</u></a></h3>
