--- a/teamrosters.html
+++ b/teamrosters.html
@@ -95,7 +95,7 @@
             unknown matter which is 5~6 times quantity of ordinary visible matter in the universe. Dark matter plays an important role to form the present structure of the universe. If the direct 
             detection of the dark matter is achieved, it can be a great help to solve the mysteries of the universe and also to discover new particles."</font></p>     
         <hr>                
-        <h3><a href="http://www.xenon1t.org/" style="color:white"><u><XENON</u></a></h3>                
+        <h3><a href="http://www.xenon1t.org/" style="color:white"><u>XENON</u></a></h3>                
         <p class="round1" style="margin-left:20px;color:white"><font size="3">"The XENON dark matter experiment is installed underground at the Laboratory Nazionali del Gran Sasso of INFN, Italy. 
             A 62 kg liquid xenon target is operated as a dual phase (liquid/gas) time projection chamber to search for interactions of dark matter particles."</font></p>
         <hr>
