--- a/teamrosters.html
+++ b/teamrosters.html
@@ -161,7 +161,7 @@
         <p class="round1" style="margin-left:20px;color:white"><font size="3">"The CoGeNT experiment looks for a type of dark-matter particle called a WIMP, or Weakly Interacting Massive Particle, specifically those relatively light in mass."</font></p>
         <hr>
         <h3><a href="https://www.snolab.ca/news/2013-05-03-coupp-60-and-running-snolab" style="color:white"><u>COUPP-60</u></a></h3>
-        <p class="round1" style="margin-left:20px;color:white"<font size="3">"The COUPP collaboration uses bubble chambers to search for dark matter in the form of Weakly Interacting Massive Particles, or WIMPs.  The bubble chamber fluid, CF3I is superheated 
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"The COUPP collaboration uses bubble chambers to search for dark matter in the form of Weakly Interacting Massive Particles, or WIMPs.  The bubble chamber fluid, CF3I is superheated 
                 so that the recoiling nucleus from a scattering WIMP will nucleate a single bubble (leave a small amount of energy behind that creates a bubble)."</font></p>
         <hr><br>            
                
