--- a/teamrosters.html
+++ b/teamrosters.html
@@ -56,7 +56,7 @@
     <ul class="nav navbar-nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="rules.html">The Game</a></li>
-        <li class="dropdown">
+        <li class="active" class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="teamrosters.html">The Crew
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
