--- a/directdarkmatter.html
+++ b/directdarkmatter.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://www.esa.int/var/esa/storage/images/esa_multimedia/images/2008/01/hubble_maps_dark_matter_web_in_a_large_galaxy_cluster/10144540-2-eng-GB/Hubble_maps_dark_matter_web_in_a_large_galaxy_cluster.jpg");
+        background-image: url("https://3c1703fe8d.site.internapcdn.net/newman/gfx/news/hires/2018/thesearchfor.jpg");
     }
     .cd-fixed-bg
     {
