--- a/directdarkmatter.html
+++ b/directdarkmatter.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://3c1703fe8d.site.internapcdn.net/newman/gfx/news/hires/2018/thesearchfor.jpg");
+        background-image: url("http://imgsrc.hubblesite.org/hvi/uploads/image_file/image_attachment/26989/web_print.jpg");
     }
     .cd-fixed-bg
     {
