--- a/directdarkmatter.html
+++ b/directdarkmatter.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("http://cdn.spacetelescope.org/archives/images/screen/heic1111a.jpg");
+        background-image: url("http://cdn.sci-news.com/images/enlarge2/image_3716e-MACS-J0416.jpg");
     }
     .cd-fixed-bg
     {
