--- a/directdarkmatter.html
+++ b/directdarkmatter.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("http://chandra.harvard.edu/photo/2016/frontier/frontier_macsj0416_optical.jpg");
+        background-image: url("https://apod.nasa.gov/apod/image/0308/cl0024_hstcomp_c2.jpg");
     }
     .cd-fixed-bg
     {
