--- a/directdarkmatter.html
+++ b/directdarkmatter.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://apod.nasa.gov/apod/image/0308/cl0024_hstcomp_c2.jpg");
+        background-image: url("http://cdn.spacetelescope.org/archives/images/screen/heic1506e.jpg");
     }
     .cd-fixed-bg
     {
