--- a/neutrinos.html
+++ b/neutrinos.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwiuoLrspdvcAhVBR60KHazwCnwQjRx6BAgBEAU&url=https%3A%2F%2Fwww.newyorker.com%2Fnews%2Fdaily-comment%2Fwhat-neutrinos-reveal&psig=AOvVaw01a_YZK_9MiM22giawlQRW&ust=1533743471174578");
+        background-image: url("https://media.newyorker.com/photos/590971191c7a8e33fb38eca8/16:9/w_1200,h_630,c_limit/Krauss-WhatNeutrinosReveal1.jpg");
     }
     .cd-fixed-bg
     {
