--- a/neutrinos.html
+++ b/neutrinos.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://media.newyorker.com/photos/590971191c7a8e33fb38eca8/16:9/w_1200,h_630,c_limit/Krauss-WhatNeutrinosReveal1.jpg");
+        background-image: url("https://3c1703fe8d.site.internapcdn.net/newman/gfx/news/2018/blastfromthe.jpg");
     }
     .cd-fixed-bg
     {
