--- a/neutrinos.html
+++ b/neutrinos.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://3c1703fe8d.site.internapcdn.net/newman/gfx/news/2018/blastfromthe.jpg");
+        background-image: url("http://s3-us-west-1.amazonaws.com/www-prod-storage.cloud.caltech.edu/styles/article_photo/s3/CT_McKeown-Neutrino_SPOTLIGHT.jpg?itok=pSLSWa23");
     }
     .cd-fixed-bg
     {
