--- a/neutrinos.html
+++ b/neutrinos.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("http://s3-us-west-1.amazonaws.com/www-prod-storage.cloud.caltech.edu/styles/article_photo/s3/CT_McKeown-Neutrino_SPOTLIGHT.jpg?itok=pSLSWa23");
+        background-image: url("https://scitechdaily.com/images/Each-antineutrino-detector-at-Daya-Bay-is-lined-with-photomultiplier-tubes.jpg");
     }
     .cd-fixed-bg
     {
