--- a/astroparticle.html
+++ b/astroparticle.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("http://www.sissa.it/app/images/wallpaper.jpg");
+        background-image: url("https://news.nationalgeographic.com/content/dam/news/photos/000/186/18665.ngsversion.1421960037202.adapt.1900.1.jpg");
     }
     .cd-fixed-bg
     {
