--- a/neutrinos.html
+++ b/neutrinos.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://scitechdaily.com/images/Each-antineutrino-detector-at-Daya-Bay-is-lined-with-photomultiplier-tubes.jpg");
+        background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/The_Daya_Bay_Antineutrino_Detector_%288056998030%29.jpg/1200px-The_Daya_Bay_Antineutrino_Detector_%288056998030%29.jpg");
     }
     .cd-fixed-bg
     {
