--- a/neutrinos.html
+++ b/neutrinos.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://i.pinimg.com/564x/46/50/bb/4650bbb9393811fe345014f30997b36f.jpg");
+        background-image: url("https://youngzine.org/sites/default/files/legacy/images/neutrino-sun.jpg");
     }
     .cd-fixed-bg
     {
