--- a/neutrinos.html
+++ b/neutrinos.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://youngzine.org/sites/default/files/legacy/images/neutrino-sun.jpg");
+        background-image: url("https://www.investigacionyciencia.es/images/21423/articleImageThumbnail.jpg");
     }
     .cd-fixed-bg
     {
