--- a/neutrinos.html
+++ b/neutrinos.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://cdn.vox-cdn.com/thumbor/yC7uPuUhvRBTnscwVSz2tAAoheE=/0x0:1920x1080/1200x800/filters:focal(807x387:1113x693)/cdn.vox-cdn.com/uploads/chorus_image/image/60347453/BlazarNeutrino2_1920x1080_M__1_.0.jpg");
+        background-image: url("https://i.imgur.com/eiFGW.jpg");
     }
     .cd-fixed-bg
     {
