--- a/neutrinos.html
+++ b/neutrinos.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://physics.aps.org/assets/af9e1686-8a19-4b02-ae72-8fe2a36f1738/e24_1.png");
+        background-image: url("https://www.thehindu.com/opinion/op-ed/article18788543.ece/alternates/FREE_300/08THiStock-683526796");
     }
     .cd-fixed-bg
     {
