--- a/neutrinos.html
+++ b/neutrinos.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://www.thehindu.com/opinion/op-ed/article18788543.ece/alternates/FREE_300/08THiStock-683526796");
+        background-image: url("https://i0.wp.com/blogs.ucdavis.edu/egghead/files/2016/11/SNOWaterFill-1.jpg");
     }
     .cd-fixed-bg
     {
