--- a/indirectdarkmatter.html
+++ b/indirectdarkmatter.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("http://cdn.spacetelescope.org/archives/images/screen/heic1506f.jpg");
+        background-image: url("https://img.purch.com/w/660/aHR0cDovL3d3dy5zcGFjZS5jb20vaW1hZ2VzL2kvMDAwLzAwMC8wNjcvb3JpZ2luYWwvMDUxMjEzX2RhcmtfbWF0dGVyQl8wMi5qcGc=");
     }
     .cd-fixed-bg
     {
