--- a/indirectdarkmatter.html
+++ b/indirectdarkmatter.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://img.purch.com/w/660/aHR0cDovL3d3dy5zcGFjZS5jb20vaW1hZ2VzL2kvMDAwLzAwMC8wNjcvb3JpZ2luYWwvMDUxMjEzX2RhcmtfbWF0dGVyQl8wMi5qcGc=");
+        background-image: url("http://chandra.harvard.edu/photo/2015/dark/dark_a2744.jpg");
     }
     .cd-fixed-bg
     {
