--- a/directdarkmatter.html
+++ b/directdarkmatter.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("http://cdn.spacetelescope.org/archives/images/screen/opo0917a.jpg");
+        background-image: url("http://www.syfy.com/sites/syfy/files/wire/legacy/DarkMatter_0.jpg");
     }
     .cd-fixed-bg
     {
