--- a/directdarkmatter.html
+++ b/directdarkmatter.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://cdn.images.express.co.uk/img/dynamic/151/590x/universe-883419.jpg");
+        background-image: url("https://www.sciencedaily.com/images/2015/02/150209113046_1_540x360.jpg");
     }
     .cd-fixed-bg
     {
