--- a/directdarkmatter.html
+++ b/directdarkmatter.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://www.sciencedaily.com/images/2015/02/150209113046_1_540x360.jpg");
+        background-image: url("http://cdn.spacetelescope.org/archives/images/screen/opo0917a.jpg");
     }
     .cd-fixed-bg
     {
