--- a/indirectdarkmatter.html
+++ b/indirectdarkmatter.html
@@ -89,7 +89,41 @@
             An indirect dark matter search is being performed by SK by looking for neutrinos and neutrino-induced muons from annihilations of WIMPs in the Earth, the sun, and the galaxy's 
             center and halo. SK has an excellent sensitivity to lower mass weakly interacting massive particles due to its lower neutrino energy threshold."</font></p>
         <hr>     
-              
+        <h3><a href="http://pamela.roma2.infn.it/index.php" style="color:white"><u>PAMELA</u></a></h3>             
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"PAMELA is a cosmic ray research detector onboard the Resurs-DK1 Russian satellite that searches for the annihilation products of weakly interacting massive particles (WIMPs). 
+            PAMELA indirectly searches for the existence of dark matter by looking for antiprotons and positrons that may result from the annihilations of WIMPs."</font></p>
+        <hr>
+        <h3><a href="https://magic.mpp.mpg.de/" style="color:white"><u>MAGIC Telescopes</u></a></h3>                
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"The MAGIC telescopes consist of two ground-based, Imaging Atmospheric Cherenkov Telescopes. The telescopes include nearly 1,000 individual mirrors, 
+            together resulting in a parabolic dish with a 17-meter diameter, and a camera that detects images of gamma-ray induced air showers in blueish Cherenkov light. The telescopes measure gamma-ray sources in the 
+            very high-energy range 30 GeV – 50 TeV. These rays may result from the annihilation of weakly interacting massive particles (WIMPs), which are major candidates for dark matter."</font></p>  
+        <h3><a href="http://www.mpi-hd.mpg.de/hfm/HESS/" style="color:white"><u>HESS</u></a></h3>                
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"The HESS observatory uses a system of Imaging Atmospheric Cherenkov Telescopes, located in Namibia, to investigate very high-energy cosmic gamma rays. The experiment looks 
+            for the predicted gamma-ray annihilation signal from weakly interacting massive particles (WIMPs) in various regions considered to have enhanced dark matter density, including the galactic center, Sagittarius dwarf, M87, and clumps in the galactic halo."</font></p>
+        <hr>         
+        <h3><a href="https://confluence.slac.stanford.edu/display/hpsg/Heavy+Photon+Search+Experiment" style="color:white"><u>HPS</u></a></h3>                
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"HPS will start hunting for new particles that mediate dark matter interactions, known as dark matter force particles. In this search for dark-matter photons, HPS will send electrons streaming into a 
+            sheet of tungsten foil and look for electron-positron pairs resulting from the decay of a heavy photon. If these particle pairs appear some distance from the foil, that will indicate that an unseen particle—like the dark-matter photon—was created first, then flew a 
+            certain distance before decaying into the electron-positron pair."</font></p>
+        <hr>                
+        <h3><a href="http://gamma0.astro.ucla.edu/gaps/" style="color:white"><u>GAPS</u></a></h3>                
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"GAPS is a proposed balloon-based indirect dark matter search focusing on antiparticles produced by WIMP (weakly interacting massive particle) annihilation and decay in the Galactic halo. 
+            Unlike conventional magnetic spectrometers, GAPS uses the exotic-atom technique, making it complementary to the standard approach. The GAPS detector will use layers of lithium-doped silicon—Si(Li)—detectors surrounded by time of flight plastic scintillators."</font></p>
+        <hr>
+        <h3><a href="http://fermi.gsfc.nasa.gov/" style="color:white"><u>FGST-LAT</u></a></h3>                
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"The Large Area Telescope (LAT), onboard the Fermi Gamma-ray Space Telescope (FGST), works to unveil the high-energy universe. Through its space-based studies of gamma rays, FGST-LAT reveals insight into everything 
+            from supernova remnants to active galactic nuclei. High-energy gamma rays are expected to stream from dark matter, making FGST-LAT a powerful dark matter hunter."</font></p>
+        <hr>
+        <h3><a href="https://www.cta-observatory.org/" style="color:white"><u>CTA</u></a></h3>                
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"CTA is a ground-based, very-high-energy gamma-ray instrument. Theoretical models predict that dark matter can annihilate or decay to detectable Standard Model particles, including a large number of 
+            very-high-energy gamma rays. With its two telescope arrays (one in the northern hemisphere and one in the southern hemisphere), CTA will search for these gamma rays with unprecedented sensitivity, providing a tool to study the properties of dark matter particles."</font></p>"</font></p>
+        <hr>        
+        <h3><a href="http://www.ams02.org/" style="color:white"><u>AMS</u></a></h3>                
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"AMS is a precision particle physics detector installed on the International Space Station. The detector measures particles (electrons, positrons, antiprotons) 
+            and nuclei to the TeV energy range. 51 billion events have been collected and 11 million positron-electron events have been analyzed. Collisions of dark matter would produce an excess of positrons. This possibility 
+            is being studied. AMS will be on the Space Station for at least 10 more years and will provide a sensitive search for dark matter in space."</font></p>    
+        <hr>                
+                
         <div class="flex-container">
         <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
         <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
