--- a/lhcatlas.html
+++ b/lhcatlas.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://home.cern/sites/home.web.cern.ch/files/image/experiment/2013/01/atlas.jpeg");
+        background-image: url("https://www.eurekalert.org/multimedia/pub/web/88091_web.jpg");
     }
     .cd-fixed-bg
     {
@@ -103,8 +103,8 @@
         <hr>  
         <h3 style="color:white">Exotica</h3>
         <p class="round1" style="margin-left:20px;color:white"><font size="3">"The Exotica group is searching for physics beyond the Standard Model with a signature-based program. 
-          Our aim is to cover all experimentally viable signatures focusing on non-supersymmetric models from <a href="https://home.cern/about/physics/extra-dimensions-gravitons-and-tiny-black-holes" style="color:white><u>Extra Dimensions and mini Black Holes</u></a>
-            to Dark Matter, extended Higgs models, and <a href="https://home.cern/about/physics/compositeness" style="color:white"><u>Compositeness</u></a> to name a few."</font></p>            
+          Our aim is to cover all experimentally viable signatures focusing on non-supersymmetric models from <a href="https://home.cern/about/physics/extra-dimensions-gravitons-and-tiny-black-holes" style="color:white"><u>Extra Dimensions and mini Black Holes</u></a>
+           to Dark Matter, extended Higgs models, and <a href="https://home.cern/about/physics/compositeness" style="color:white"><u>Compositeness</u></a> to name a few."</font></p>            
         <hr>              
 
       <div class="flex-container">
