--- a/lhcatlas.html
+++ b/lhcatlas.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://www.eurekalert.org/multimedia/pub/web/88091_web.jpg");
+        background-image: url("http://web.hep.uiuc.edu/atlas/ATLAS_PIX/ATLAS_Pix_2005/atlas_barrel_calorimeter2.jpg");
     }
     .cd-fixed-bg
     {
