--- a/lhccms.html
+++ b/lhccms.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://www.symmetrymagazine.org/sites/default/files/styles/2015_hero/public/images/standard/CMS_detector-s.jpg?itok=-PjlvIm0");
+        background-image: url("https://st2.depositphotos.com/2383545/6654/i/950/depositphotos_66541757-stock-photo-cms-detector-at-large-hadron.jpg");
     }
     .cd-fixed-bg
     {
