--- a/lhcatlas.html
+++ b/lhcatlas.html
@@ -91,8 +91,8 @@
         <div class="w3-container">
         <div class="parallax"></div>
                       
-        <h2 style="color:white"><b><i><u><a href="https://home.cern/about/experiments/atlas" style="color:white">LHC ATLAS</u> Members</b></i></a></h2>
-        <p style="color:white">"From a cavern 100 metres below a small Swiss village, the 7000-tonne ATLAS detector is probing for fundamental particles and is one of two general-purpose detectors at the Large Hadron Collider (LHC). 
+        <h2><b><i><u><a href="https://home.cern/about/experiments/atlas" style="color:white">LHC ATLAS</u> Members</b></i></a></h2>
+        <p>"From a cavern 100 metres below a small Swiss village, the 7000-tonne ATLAS detector is probing for fundamental particles and is one of two general-purpose detectors at the Large Hadron Collider (LHC). 
           It investigates a wide range of physics, from the search for the Higgs boson to extra dimensions and particles that could make up dark matter. Although it has the same scientific goals as the CMS experiment, it uses different 
           technical solutions and a different magnet-system design."</p>
         <h3 style="color:white"><a href="https://home.cern/about/physics/standard-model" style="color:white"><u>The Standard Model</u></a></h3>
@@ -114,7 +114,7 @@
           Our aim is to cover all experimentally viable signatures focusing on non-supersymmetric models from <a href="https://home.cern/about/physics/extra-dimensions-gravitons-and-tiny-black-holes" style="color:white"><u>Extra Dimensions and mini Black Holes</u></a>
            to Dark Matter, extended Higgs models, and <a href="https://home.cern/about/physics/compositeness" style="color:white"><u>Compositeness</u></a> to name a few."</font></p>            
         <hr>              
-
+      <div class="parallax"></div>
       <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
              <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
