--- a/lhcatlas.html
+++ b/lhcatlas.html
@@ -91,28 +91,28 @@
         <div class="w3-container">
         <div class="parallax"></div>
                       
-        <h2><b><i><u><a href="https://home.cern/about/experiments/atlas">LHC ATLAS</u> Members</b></i></a></h2>
+        <h2><b><i><u><a href="https://home.cern/about/experiments/atlas" style="color:black">LHC ATLAS</u> Members</b></i></a></h2>
         <p>"From a cavern 100 metres below a small Swiss village, the 7000-tonne ATLAS detector is probing for fundamental particles and is one of two general-purpose detectors at the Large Hadron Collider (LHC). 
           It investigates a wide range of physics, from the search for the Higgs boson to extra dimensions and particles that could make up dark matter. Although it has the same scientific goals as the CMS experiment, it uses different 
           technical solutions and a different magnet-system design."</p>
-        <h3><a href="https://home.cern/about/physics/standard-model"><u>The Standard Model</u></a></h3>
+        <h3><a href="https://home.cern/about/physics/standard-model" style="color:black"><u>The Standard Model</u></a></h3>
         <p class="round1" style="margin-left:20px"><font size="3">"The theories and discoveries of thousands of physicists since the 1930s have resulted in a remarkable insight into the fundamental structure of matter: everything 
           in the universe is found to be made from a few basic building blocks called fundamental particles, governed by four fundamental forces. Our best understanding of how these particles and three of the forces are related to each other 
           is encapsulated in the Standard Model of particle physics."</font></p>            
         <hr>   
-        <h3><a href="https://home.cern/topics/higgs-boson"><u>Higgs Physics</u></a></h3>
+        <h3><a href="https://home.cern/topics/higgs-boson" style="color:black"><u>Higgs Physics</u></a></h3>
         <p class="round1" style="margin-left:20px"><font size="3">"The Higgs boson, as proposed within the Standard Model, is the simplest manifestation of the Brout-Englert-Higgs mechanism. 
           On 4 July 2012, the ATLAS and CMS experiments at CERN's Large Hadron Collider announced they had each observed a new particle in the mass region around 126 GeV. This particle is consistent with the Higgs boson predicted by the Standard Model."</font></p>            
         <hr>    
-        <h3><a href="https://home.cern/about/physics/supersymmetry"><u>Supersymmetry</u></a></h3>
+        <h3><a href="https://home.cern/about/physics/supersymmetry" style="color:black"><u>Supersymmetry</u></a></h3>
         <p class="round1" style="margin-left:20px"><font size="3">"The Standard Model has worked beautifully to predict what experiments have shown so far about the basic building blocks of matter, but physicists recognize that it is incomplete.
           Supersymmetry is an extension of the Standard Model that aims to fill some of the gaps. It predicts a partner particle for each particle in the Standard Model. These new particles would solve a major problem with the Standard Model – fixing the mass
           of the Higgs boson. If the theory is correct, supersymmetric particles should appear in collisions at the LHC."</font></p>            
         <hr>  
         <h3>Exotica</h3>
         <p class="round1" style="margin-left:20px"><font size="3">"The Exotica group is searching for physics beyond the Standard Model with a signature-based program. 
-          Our aim is to cover all experimentally viable signatures focusing on non-supersymmetric models from <a href="https://home.cern/about/physics/extra-dimensions-gravitons-and-tiny-black-holes" style="color:white"><u>Extra Dimensions and mini Black Holes</u></a>
-           to Dark Matter, extended Higgs models, and <a href="https://home.cern/about/physics/compositeness" style="color:white"><u>Compositeness</u></a> to name a few."</font></p>            
+          Our aim is to cover all experimentally viable signatures focusing on non-supersymmetric models from <a href="https://home.cern/about/physics/extra-dimensions-gravitons-and-tiny-black-holes" style="color:black"><u>Extra Dimensions and mini Black Holes</u></a>
+           to Dark Matter, extended Higgs models, and <a href="https://home.cern/about/physics/compositeness" style="color:black"><u>Compositeness</u></a> to name a few."</font></p>            
         <hr>              
       <div class="parallax"></div>
       <div class="flex-container">
