--- a/lhccms.html
+++ b/lhccms.html
@@ -28,7 +28,7 @@
     }
     .round1
     {
-        border: 2px solid white;
+        border: 2px solid black;
         border-radius: 5px;
         padding: 15px;
     }
@@ -91,28 +91,28 @@
         <div class="w3-container">
         <div class="parallax"></div>
               
-        <h2 style="color:white"><b><i><u><a href="https://home.cern/about/experiments/cms" style="color:white">LHC CMS</u> Members</b></i></a></h2>
-        <p style="color:white">"The CMS detector uses a huge solenoid magnet to bend the paths of particles from collisions in the LHC and has a broad physics programme ranging from 
+        <h2><b><i><u><a href="https://home.cern/about/experiments/cms" style="color:black">LHC CMS</u> Members</b></i></a></h2>
+        <p style="color:black">"The CMS detector uses a huge solenoid magnet to bend the paths of particles from collisions in the LHC and has a broad physics programme ranging from 
           studying the Standard Model (including the Higgs boson) to searching for extra dimensions and particles that could make up dark matter. Although it has the same scientific goals 
           as the ATLAS experiment, it uses different technical solutions and a different magnet-system design."</p>
-        <h3 style="color:white"><a href="https://home.cern/about/physics/standard-model" style="color:white"><u>The Standard Model</u></a></h3>
-        <p class="round1" style="margin-left:20px;color:white"><font size="3">"The theories and discoveries of thousands of physicists since the 1930s have resulted in a remarkable insight into the fundamental structure of matter: everything 
+        <h3><a href="https://home.cern/about/physics/standard-model" style="color:black"><u>The Standard Model</u></a></h3>
+        <p class="round1" style="margin-left:20px"><font size="3">"The theories and discoveries of thousands of physicists since the 1930s have resulted in a remarkable insight into the fundamental structure of matter: everything 
           in the universe is found to be made from a few basic building blocks called fundamental particles, governed by four fundamental forces. Our best understanding of how these particles and three of the forces are related to each other 
           is encapsulated in the Standard Model of particle physics."</font></p>            
         <hr>   
-        <h3 style="color:white"><a href="https://home.cern/topics/higgs-boson" style="color:white"><u>Higgs Physics</u></a></h3>
+        <h3><a href="https://home.cern/topics/higgs-boson" style="color:black"><u>Higgs Physics</u></a></h3>
         <p class="round1" style="margin-left:20px;color:white"><font size="3">"The Higgs boson, as proposed within the Standard Model, is the simplest manifestation of the Brout-Englert-Higgs mechanism. 
           On 4 July 2012, the ATLAS and CMS experiments at CERN's Large Hadron Collider announced they had each observed a new particle in the mass region around 126 GeV. This particle is consistent with the Higgs boson predicted by the Standard Model."</font></p>            
         <hr>    
-        <h3 style="color:white"><a href="https://home.cern/about/physics/supersymmetry" style="color:white"><u>Supersymmetry</u></a></h3>
+        <h3><a href="https://home.cern/about/physics/supersymmetry" style="color:black"><u>Supersymmetry</u></a></h3>
         <p class="round1" style="margin-left:20px;color:white"><font size="3">"The Standard Model has worked beautifully to predict what experiments have shown so far about the basic building blocks of matter, but physicists recognize that it is incomplete.
           Supersymmetry is an extension of the Standard Model that aims to fill some of the gaps. It predicts a partner particle for each particle in the Standard Model. These new particles would solve a major problem with the Standard Model – fixing the mass
           of the Higgs boson. If the theory is correct, supersymmetric particles should appear in collisions at the LHC."</font></p>            
         <hr>  
-        <h3 style="color:white">Exotica</h3>
+        <h3 style="color:black">Exotica</h3>
         <p class="round1" style="margin-left:20px;color:white"><font size="3">"The Exotica group is searching for physics beyond the Standard Model with a signature-based program. 
-          Our aim is to cover all experimentally viable signatures focusing on non-supersymmetric models from <a href="https://home.cern/about/physics/extra-dimensions-gravitons-and-tiny-black-holes" style="color:white"><u>Extra Dimensions and mini Black Holes</u></a>
-           to Dark Matter, extended Higgs models, and <a href="https://home.cern/about/physics/compositeness" style="color:white"><u>Compositeness</u></a> to name a few."</font></p>            
+          Our aim is to cover all experimentally viable signatures focusing on non-supersymmetric models from <a href="https://home.cern/about/physics/extra-dimensions-gravitons-and-tiny-black-holes" style="color:black"><u>Extra Dimensions and mini Black Holes</u></a>
+           to Dark Matter, extended Higgs models, and <a href="https://home.cern/about/physics/compositeness" style="color:black"><u>Compositeness</u></a> to name a few."</font></p>            
         <hr>              
         <div="parallax"></div>
             
