--- a/lhccms.html
+++ b/lhccms.html
@@ -101,16 +101,16 @@
           is encapsulated in the Standard Model of particle physics."</font></p>            
         <hr>   
         <h3><a href="https://home.cern/topics/higgs-boson" style="color:black"><u>Higgs Physics</u></a></h3>
-        <p class="round1" style="margin-left:20px;color:white"><font size="3">"The Higgs boson, as proposed within the Standard Model, is the simplest manifestation of the Brout-Englert-Higgs mechanism. 
+        <p class="round1" style="margin-left:20px"><font size="3">"The Higgs boson, as proposed within the Standard Model, is the simplest manifestation of the Brout-Englert-Higgs mechanism. 
           On 4 July 2012, the ATLAS and CMS experiments at CERN's Large Hadron Collider announced they had each observed a new particle in the mass region around 126 GeV. This particle is consistent with the Higgs boson predicted by the Standard Model."</font></p>            
         <hr>    
         <h3><a href="https://home.cern/about/physics/supersymmetry" style="color:black"><u>Supersymmetry</u></a></h3>
-        <p class="round1" style="margin-left:20px;color:white"><font size="3">"The Standard Model has worked beautifully to predict what experiments have shown so far about the basic building blocks of matter, but physicists recognize that it is incomplete.
+        <p class="round1" style="margin-left:20px"><font size="3">"The Standard Model has worked beautifully to predict what experiments have shown so far about the basic building blocks of matter, but physicists recognize that it is incomplete.
           Supersymmetry is an extension of the Standard Model that aims to fill some of the gaps. It predicts a partner particle for each particle in the Standard Model. These new particles would solve a major problem with the Standard Model – fixing the mass
           of the Higgs boson. If the theory is correct, supersymmetric particles should appear in collisions at the LHC."</font></p>            
         <hr>  
         <h3 style="color:black">Exotica</h3>
-        <p class="round1" style="margin-left:20px;color:white"><font size="3">"The Exotica group is searching for physics beyond the Standard Model with a signature-based program. 
+        <p class="round1" style="margin-left:20px"><font size="3">"The Exotica group is searching for physics beyond the Standard Model with a signature-based program. 
           Our aim is to cover all experimentally viable signatures focusing on non-supersymmetric models from <a href="https://home.cern/about/physics/extra-dimensions-gravitons-and-tiny-black-holes" style="color:black"><u>Extra Dimensions and mini Black Holes</u></a>
            to Dark Matter, extended Higgs models, and <a href="https://home.cern/about/physics/compositeness" style="color:black"><u>Compositeness</u></a> to name a few."</font></p>            
         <hr>              
