--- a/lhccms.html
+++ b/lhccms.html
@@ -114,11 +114,11 @@
           Our aim is to cover all experimentally viable signatures focusing on non-supersymmetric models from <a href="https://home.cern/about/physics/extra-dimensions-gravitons-and-tiny-black-holes" style="color:black"><u>Extra Dimensions and mini Black Holes</u></a>
            to Dark Matter, extended Higgs models, and <a href="https://home.cern/about/physics/compositeness" style="color:black"><u>Compositeness</u></a> to name a few."</font></p>            
         <hr>              
-        <div="parallax"></div>
+        <div class="parallax"></div>
             
       <div class="flex-container">
-             <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
-             <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
+             <p>Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
+             <a href="about.html"><u>About</u></a> | <a href="creators.html"><u>The Creators</u></a></p>
              <img src="kansas-jayhawks-profile.jpg" style="float:right;width:40px;height:40px">
        </div>
        </div>
