--- a/lhccms.html
+++ b/lhccms.html
@@ -117,8 +117,8 @@
         <div class="parallax"></div>
             
       <div class="flex-container">
-             <p>Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
-             <a href="about.html"><u>About</u></a> | <a href="creators.html"><u>The Creators</u></a></p>
+             <p>Developed at <a href="http://physics.ku.edu/" style="color:black"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
+             <a href="about.html" style="color:black"><u>About</u></a> | <a href="creators.html" style="color:black"><u>The Creators</u></a></p>
              <img src="kansas-jayhawks-profile.jpg" style="float:right;width:40px;height:40px">
        </div>
        </div>
