--- a/neutrinos.html
+++ b/neutrinos.html
@@ -84,7 +84,7 @@
             <div class="cd-scrolling-bg__content">
               
               
-        <h2 style="color:white"><b><i><u>Neutrino</u> Members</b></i></h2>
+        <h2 style="color:white"><b><i><u><a href="https://www.smithsonianmag.com/science-nature/looking-for-neutrinos-natures-ghost-particles-64200742/" style="color:white">Neutrino</u> Members</b></i></h2>
         <h3><a href="https://prospect.yale.edu/" style="color:white"><u>PROSPECT</u></a></h3>
         <p class="round1" style="margin-left:20px;color:white"><font size="3">PROSPECT is a reactor neutrino experiment searching for the oscillation 
             signature of sterile neutrinos and testing our understanding of the emission of antineutrinos from the fission products in 
