--- a/astroparticle.html
+++ b/astroparticle.html
@@ -82,7 +82,7 @@
         <div class="w3-container">
         <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
- <h2 style="color:white;text-align:left"><b><i><u><a href="https://www.nikhef.nl/en/science-technology/astroparticle-physics/" style="color:black">Astroparticle Members</u></a></b></i></h2>
+ <h2 style="color:white;text-align:left"><b><i><u><a href="https://www.nikhef.nl/en/science-technology/astroparticle-physics/" style="color:white">Astroparticle Members</u></a></b></i></h2>
         <h3><a href="https://www.katrin.kit.edu/" style="color:white"><u>KATRIN</u></a></h3>
         <p class="round1" style="margin-left:20px;color:white"><font size="3">"The Karlsruhe Tritium Neutrino Experiment, or KATRIN, is a massive 
             detector based in the town of Karlsruhe, Germany, that has been designed to measure a neutrino's mass with far greater 
