--- a/index.html
+++ b/index.html
@@ -58,7 +58,18 @@
     <ul class="nav navbar-nav">
         <li class="active"><a href="index.html" style="color:white">Home</a></li>
         <li><a href="rules.html" style="color:white">The Game</a></li>
-        <li><a href="teamrosters.html" style="color:white">The Crew</a></li>
+         <li class="active" class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="teamrosters.html">The Crew
+        <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="directdarkmatter.html">Direct Dark Matter Members</a></li>
+          <li><a href="indirectdarkmatter.html">Indirect Dark Matter Members</a></li>
+          <li><a href="neutrinos.html">Neutrino Members</a></li>
+          <li><a href="astroparticle.html">Astroparticle Members</a></li>
+          <li><a href="lhcatlas.html">LHC Atlas Members</a></li>
+          <li><a href="lhccms.html">LHC CMS Members</a></li>            
+        </ul>
+      </li>
         <li><a href="scoringrubric.html" style="color:white">The Hunt</a></li>
         <li><a href="joinatournament.html" style="color:white">Join a Tournament</a></li>
         <li><a href="instructors.html" style="color:white">The Instructors</a></li>
