--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -49,7 +49,18 @@
      <ul class="nav navbar-nav">
          <li><a href="index.html">Home</a></li>
          <li><a href="rules.html">The Game</a></li>
-         <li><a href="teamrosters.html">The Crew</a></li>
+              <li class="active" class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="teamrosters.html">The Crew
+        <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="directdarkmatter.html">Direct Dark Matter Members</a></li>
+          <li><a href="indirectdarkmatter.html">Indirect Dark Matter Members</a></li>
+          <li><a href="neutrinos.html">Neutrino Members</a></li>
+          <li><a href="astroparticle.html">Astroparticle Members</a></li>
+          <li><a href="lhcatlas.html">LHC Atlas Members</a></li>
+          <li><a href="lhccms.html">LHC CMS Members</a></li>            
+        </ul>
+      </li>
          <li class="active"><a href="scoringrubric.html">The Hunt</a></li>
 	     <li><a href="joinatournament.html">Join a Tournament</a></li>
          <li><a href="instructors.html">The Instructors</a></li>
