--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html" style="color:white">Home</a></li>
-        <li><a href="rules.html" style="color:white">The Game</a></li>
-         <li class="active" class="dropdown">
+        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="rules.html">The Game</a></li>
+         <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="teamrosters.html">The Crew
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
@@ -70,9 +70,9 @@
           <li><a href="lhccms.html">LHC CMS Members</a></li>            
         </ul>
       </li>
-        <li><a href="scoringrubric.html" style="color:white">The Hunt</a></li>
-        <li><a href="joinatournament.html" style="color:white">Join a Tournament</a></li>
-        <li><a href="instructors.html" style="color:white">The Instructors</a></li>
+        <li><a href="scoringrubric.html">The Hunt</a></li>
+        <li><a href="joinatournament.html">Join a Tournament</a></li>
+        <li><a href="instructors.html">The Instructors</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
         <li><a href="signup.html" style="color:white"><span class="glyphicon glyphicon-user"></span>  Sign Up</a></li>
