--- a/signup.html
+++ b/signup.html
@@ -87,7 +87,7 @@
     <ul class="nav navbar-nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="rules.html">The Game</a></li>
-             <li class="active" class="dropdown">
+             <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="teamrosters.html">The Crew
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
