--- a/rules.html
+++ b/rules.html
@@ -1,4 +1,4 @@
-                                                        "thegame.html"
+                                                        <!--"thegame.html"-->
 <!DOCTYPE html> 
 <html>
 <head>
