--- a/joinatournament.html
+++ b/joinatournament.html
@@ -62,7 +62,7 @@
     </div>
         <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="rules.html">The Game</a></li>
                  <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="teamrosters.html">The Crew
@@ -77,7 +77,7 @@
         </ul>
       </li>
             <li><a href="scoringrubric.html">The Hunt</a></li>
-            <li><a href="joinatournament.html">Join a Tournament</a></li>
+            <li class="active"><a href="joinatournament.html">Join a Tournament</a></li>
             <li><a href="instructors.html">The Instructors</a></li>
         </ul>
     
