--- a/instructors.html
+++ b/instructors.html
@@ -48,7 +48,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="rules.html">The Game</a></li>
+            <li><a href="rules.html">The Game</a></li>
                  <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="teamrosters.html">The Crew
         <span class="caret"></span></a>
@@ -63,7 +63,7 @@
       </li>
             <li><a href="scoringrubric.html">The Hunt</a></li>
             <li><a href="joinatournament.html">Join a Tournament</a></li>
-            <li><a href="instructors.html">The Instructors</a></li>
+            <li class="active"><a href="instructors.html">The Instructors</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
