--- a/rules.html
+++ b/rules.html
@@ -86,8 +86,8 @@
         <li style="margin-left:50px;color:white;font-size:22px"><b><i>Event - </b></i>A subcategory within a Tournament wherein specific experiments relating to the subcategory are chosen as “Teams”</li>
         <li style="margin-left:75px;color:white;font-size:22px">This is where all the points for the game are earned</li>
         <li style="margin-left:50px;color:white;font-size:22px"><b><i>Preliminary Winner(s) - </b></i>Users who win Events within a Tournament</li>
-        <li style="margin-left:50px;color:white;font-size:22px"><b><i>Teams - </b></i>Experiments that are selected by Users</li>
-        <li style="margin-left:50px;color:white;font-size:22px"><b><i>Index - </b></i>List of Teams that a User chooses for an Event</li>
+        <li style="margin-left:50px;color:white;font-size:22px"><b><i>Crew Members - </b></i>Experiments that are selected by Users</li>
+        <li style="margin-left:50px;color:white;font-size:22px"><b><i>Crew - </b></i>List of Teams that a User chooses for an Event</li>
      </ul></div>
      <h3 style="margin-left:25px;font-size:30px;color:white">Game Tree</h3>
      <ul>
