--- a/neutrinos.html
+++ b/neutrinos.html
@@ -129,6 +129,10 @@
             located at Fermilab, at the source of the neutrinos, and the other located 450 miles away, in northern Minnesota, at the 
             Soudan Underground Mine State Park."</font></p>
         <hr>
+        <h3><a href="http://borex.lngs.infn.it/" style="color:white">BOREXINO</u></a></h3>           
+        <p class="round1" style="margin-left:20px;color:white"><font size="3">"The BOREXINO detector is a real time detector for low energy
+            solar neutrinos, with the specific goal of measuring the Be-7 neutrino flux from the sun.</font></p>
+        <hr>            
         <h3><a href="https://www-boone.fnal.gov/" style="color:white"><u>MiniBooNE</u></a></h3>
         <p class="round1" style="margin-left:20px;color:white"><font size="3">"Housed at FermiLab, MiniBooNE is an experiment designed to test for 
            neutrino mass by searching for neutrino oscillations. Knowledge of the neutrino mass may lead to physics beyond the 
