--- a/joinatournament.html
+++ b/joinatournament.html
@@ -68,7 +68,7 @@
         <a class="dropdown-toggle" data-toggle="dropdown" href="teamrosters.html">The Crew
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="directdarkmatter.html">Direct Dark Matter Members</a></li>
+          <li><a href="directdarkmatter.html">WIMP Dark Matter</a></li>
           <li><a href="indirectdarkmatter.html">Indirect Dark Matter Members</a></li>
           <li><a href="neutrinos.html">Neutrino Members</a></li>
           <li><a href="astroparticle.html">Astroparticle Members</a></li>
