--- a/index.html
+++ b/index.html
@@ -86,15 +86,14 @@
          <h2 style="text-align:center;color:white"><font face="sans-serif"> to </h2>
          <h1 style="text-align:center;color:white"><font face="sans-serif"><i> FANTASY PHYSICS <i></h1>
          <h3 style="text-align:center;color:white"><i> ~ unlock the potential ~ </i></h3> 
-     </div>    
+     </div>   
+        <div class="flex-container">             
        <footer>
-           <div class="flex-container">
-         <i><p>Developed at <u><a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</u></a> | 
+         <i><p style="color:white">Developed at <u><a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</u></a> | 
          <u><a href="about.html" style="color:white">About</u></a> | <u><a href="creators.html" style="color:white">The Creators</i></u></a></p>
-           </footer>
      
      <div class="background-img">
-     <img src="kansas-jayhawks-profile.jpg" width="50" height="50"></div>
+     <img src="kansas-jayhawks-profile.jpg" width="50" height="50"> </footer></div>
      </div>
        </div>
        </div>
