--- a/index.html
+++ b/index.html
@@ -91,9 +91,7 @@
        <footer>
          <i><p style="color:white">Developed at <u><a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</u></a> | 
          <u><a href="about.html" style="color:white">About</u></a> | <u><a href="creators.html" style="color:white">The Creators</i></u></a></p>
-     
-     <div class="background-img">
-     <img src="kansas-jayhawks-profile.jpg" width="50" height="50"> </footer></div>
+     <img src="kansas-jayhawks-profile.jpg" style="float:right;width:40px;height:40px"></footer></div>
      </div>
        </div>
        </div>
