--- a/astroparticle.html
+++ b/astroparticle.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://static1.squarespace.com/static/58c85454db29d6cb2bffaa50/t/59acbe267131a534d4a4583d/1504493141733/cosmos.jpg");
+        background-image: url("https://d5tjh8coh0tpm.cloudfront.net/banners/20170418-770-425.jpg");
     }
     .cd-fixed-bg
     {
