--- a/astroparticle.html
+++ b/astroparticle.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://d5tjh8coh0tpm.cloudfront.net/banners/20170418-770-425.jpg");
+        background-image: url("https://i.ytimg.com/vi/tsjd7xdgfjA/maxresdefault.jpg");
     }
     .cd-fixed-bg
     {
