--- a/rules.html
+++ b/rules.html
@@ -65,8 +65,7 @@
       </li>
             <li><a href="scoringrubric.html">The Hunt</a></li>
           
-            <li><a href="joinatournamentchecklogin.js">Join a Tournament</a></li> 
-                  //original line " <li><a href="joinatournament.html">Join a Tournament</a></li>
+            <li><a href="joinatournament.html">Join a Tournament</a></li> 
           
             <li><a href="instructors.html">The Instructors</a></li>
         </ul>
