--- a/astroparticle.html
+++ b/astroparticle.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://d1w9csuen3k837.cloudfront.net/Pictures/1280x720/9/9/2/132992_shutterstock_576050593.jpg");
+        background-image: url("https://vignette.wikia.nocookie.net/powerlisting/images/7/73/Space-purple-nebula-1.jpg/revision/latest?cb=20131006092217");
     }
     .cd-fixed-bg
     {
