--- a/astroparticle.html
+++ b/astroparticle.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://vignette.wikia.nocookie.net/powerlisting/images/7/73/Space-purple-nebula-1.jpg/revision/latest?cb=20131006092217");
+        background-image: url("https://images.unsplash.com/photo-1465101162946-4377e57745c3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=0ae83373fe7bf60aaf6ceb8daa337fc9&w=1000&q=80");
     }
     .cd-fixed-bg
     {
