--- a/astroparticle.html
+++ b/astroparticle.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://i.ytimg.com/vi/tsjd7xdgfjA/maxresdefault.jpg");
+        background-image: url("https://stmed.net/sites/default/files/galaxy-wallpapers-30826-4174257.jpg");
     }
     .cd-fixed-bg
     {
