--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -84,7 +84,7 @@
             <div class="cd-scrolling-bg__content">
      <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Dark Matter</b></i></h2> 
      <h4 style="margin-left:5px;color:white">WIMP & Dark/Hidden Sectors</h4>
-     <embed src="The Hunt.pdf"></embed>		    
+     <a href="The Hunt.pdf"></a>		    
      <table colspan="3" class="table table-bordered" style="color:white">
 	 <tr>
 	        <th scope="col"></th>
@@ -144,7 +144,7 @@
 	 <td></td>
          <td></td>
      </tr>
-   
+</table>
 
   <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
