--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -88,28 +88,27 @@
      <table colspan="3" class="table table-bordered" style="color:white">
 	 <tr>
 	    <th scope="col" style="text-align:center">Largest Dataset; +2</th>
-	    <th scope="col">Highest or Lowest Temperature; +1</th>
-       	    <th scope="col">Most Number of Feynman Diagrams; +2</th>
-            <th scope="col">Most Greek Letters; +1</th>
-	    <th scope="col">Most Anecdotes Told; +2</th>
+	    <th scope="col" style="text-align:center">Highest or Lowest Temperature; +1</th>
+       	    <th scope="col" style="text-align:center">Most Number of Feynman Diagrams; +2</th>
+            <th scope="col" style="text-align:center">Most Greek Letters; +1</th>
+	    <th scope="col" style="text-align:center">Most Anecdotes Told; +2</th>
 	 </tr>		 
 	 <tr>	     
-	    <th scope="col">Using a Pointer; +0.5</th>
-	    <th scope="col">Number of Graphs Used: > 10 = +2; <br> 5 - 9 = +1; <br> 1 - 4 = +0.5</th>
-	    <th scope="col">Most Data Points on a Graph; +1</th>
-      	    <th scope="col">Most Photographs Included; +1</th>
-     	    <th scope="col">Most Number of Significant Figures; +0.5</th>
+	    <th scope="col" style="text-align:center">Using a Pointer; +0.5</th>
+	    <th scope="col" style="text-align:center">Number of Graphs Used: > 10 = +2; <br> 5 - 9 = +1; <br> 1 - 4 = +0.5</th>
+	    <th scope="col" style="text-align:center">Most Data Points on a Graph; +1</th>
+      	    <th scope="col" style="text-align:center">Most Photographs Included; +1</th>
+     	    <th scope="col" style="text-align:center">Most Number of Significant Figures; +0.5</th>
 	 </tr>		 
-     	    <th scope="col">Time Presented: <br> Time Allotted = +2; <br> < Time Allotted = +0.5</th>
-    	    <th scope="col">Most Geometric Shapes; +2</th>
-	        <th scope="col">Most Questions Asked by Audience; +1</th>
-	        <th scope="col">Most Standard Deviation Graphs; +2</th>
-	        <th scope="col">Most Arrows Used to Point to Other Items; +1</th>
+     	    <th scope="col" style="text-align:center">Time Presented: <br> Time Allotted = +2; <br> < Time Allotted = +0.5</th>
+    	    <th scope="col" style="text-align:center">Most Geometric Shapes; +2</th>
+	        <th scope="col" style="text-align:center">Most Questions Asked by Audience; +1</th>
+	        <th scope="col" style="text-align:center">Most Standard Deviation Graphs; +2</th>
+	        <th scope="col" style="text-align:center">Most Arrows Used to Point to Other Items; +1</th>
 	 </tr>    
 </table>
-   
-  <a href="The Hunt.pdf" style="color:white">The_Hunt_pdf View</a>		    
-
+  <a href="The Hunt.pdf" style="color:white"><u>The_Hunt_pdf View</u></a>		    
+<br><br><br><br>
   <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
              <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
