--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -82,9 +82,9 @@
        <div class="w3-container">
        <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
-     <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Dark Matter</b></i></h2> 
-     <h4 style="margin-left:5px;color:white">WIMP & Dark/Hidden Sectors</h4>
-		    
+     <h2 style="color:white"><b><i>Dark Matter</b></i></h2> 
+     <h4 style="color:white">WIMP & Dark/Hidden Sectors</h4>
+	<br><br><br><br>	    
      <table colspan="3" class="table table-bordered" style="color:white">
 	 <tr>
 	    <th scope="col" style="text-align:center">Largest Dataset; +2</th>
@@ -95,7 +95,7 @@
 	 </tr>		 
 	 <tr>	     
 	    <th scope="col" style="text-align:center">Using a Pointer; +0.5</th>
-	    <th scope="col" style="text-align:center">Number of Graphs Used: > 10 = +2; <br> 5 - 9 = +1; <br> 1 - 4 = +0.5</th>
+	    <th scope="col" style="text-align:center">Number of Graphs Used: <br> > 10 = +2; <br> 5 - 9 = +1; <br> 1 - 4 = +0.5</th>
 	    <th scope="col" style="text-align:center">Most Data Points on a Graph; +1</th>
       	    <th scope="col" style="text-align:center">Most Photographs Included; +1</th>
      	    <th scope="col" style="text-align:center">Most Number of Significant Figures; +0.5</th>
