--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -107,7 +107,7 @@
 	        <th scope="col" style="text-align:center">Most Arrows Used to Point to Other Items; +1</th>
 	 </tr>    
 </table>
-  <a href="The Hunt.pdf" style="color:white"><u>The_Hunt_pdf View</u></a>		    
+  <a href="thehunt.pdf" style="color:white"><u>The Hunt pdf View</u></a>		    
 <br><br><br><br>
   <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
