--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -32,6 +32,10 @@
         border-radius: 5px;
         padding: 15px;
     }	
+    #image
+    {
+	position: fixed; 
+    }
 </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -83,9 +87,8 @@
        <div class="w3-container">
        <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
-     <h2 style="color:white"><b><i>Dark Matter</b></i></h2> 
-     <h4 style="color:white">WIMP & Dark/Hidden Sectors</h4>
-	<br><br>	    
+     <h2 style="color:white"><b><i>The Hunt</b></i></h2> 
+     	<br><br>	    
      <table colspan="3" class="table table-bordered" style="color:white">
 	 <tr>
 	    <th scope="col" style="text-align:center">Largest Dataset; +2</th>
@@ -113,7 +116,7 @@
   <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
              <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
-           
+             <img src="kansas-jayhawks-profile.jpg" id="image" style="float:right;width:40px;height:40px">
        </div>
         </div>
         </div>
