--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -114,6 +114,7 @@
        <div class="w3-container">
        <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
+		     <a id="top" title"Back to Top" href="#">&#10148;</a>
      <h2 style="color:white"><b><i>The Hunt</b></i></h2> 
      	<br><br>	    
      <table colspan="3" class="table table-bordered" style="color:white">
@@ -139,8 +140,7 @@
 	 </tr>    
 </table>
   <a href="thehunt.pdf" style="color:white"><u>The Hunt pdf View</u></a>		    
-<br><br><br><br>
-  <a id="top">&#10148;</a>	       
+<br><br><br><br>	       
   <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
              <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
