--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -114,7 +114,7 @@
        <div class="w3-container">
        <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
-		     <a id="top" title"Back to Top" href="#">&#10148;</a>
+		     <a id="top" title="Back to Top" href="#">&#10148;</a>
      <h2 style="color:white"><b><i>The Hunt</b></i></h2> 
      	<br><br>	    
      <table colspan="3" class="table table-bordered" style="color:white">
