--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -109,7 +109,9 @@
 </table>
   <a href="thehunt.pdf" style="color:white"><u>The Hunt pdf View</u></a>		    
 <br><br><br><br>
-<button style="float:right" onclick="scrollWin()">Back to Top</button>	
+<button type="button" class="btn btn-info btn-md" style="float:right" onclick="scrollWin()">
+          <span class="glyphicon glyphicon-arrow-up"></span> Top
+        </button>	       	
 	       <script>
 		       function scrollWin(){
 			       window.scrollTo(0, 0);}</script>
