--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -109,7 +109,7 @@
 </table>
   <a href="thehunt.pdf" style="color:white"><u>The Hunt pdf View</u></a>		    
 <br><br><br><br>
-<button type="button" class="btn btn-info btn-md" style="float:right" onclick="scrollWin()">
+<button type="button" class="btn btn-primary btn-sm" style="float:right" onclick="scrollWin()">
           <span class="glyphicon glyphicon-arrow-up"></span> Top
         </button>	       	
 	       <script>
